--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 
 <body>
-<main>
-  <h1>GitHub Pages のサンプルです</h1>
-  <a href="http://www.tam-tam.co.jp/tipsnote/"><button>TipsNote に戻る</button></a>
-</main>
-
-<script>
-console.log('GitHub Pages Sample');
-</script>
+<div class="menu">
+    <p>about us</p>
+    <p></p>
+    <p>blog</p>
+    <p>gallery</p>
+    <p>SNS</p>
+    <p>contact</p>
+</div>
 </body>
 </html>
