--- a/index.html
+++ b/index.html
@@ -2,18 +2,14 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>TipsNote : GitHub Pages Sample</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/marx/2.0.4/marx.css">
+<title>Azalea Blog</title>
+<link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-<div class="menu">
-    <p>about us</p>
-    <p></p>
-    <p>blog</p>
-    <p>gallery</p>
-    <p>SNS</p>
-    <p>contact</p>
-</div>
+<h2>Azalea Blog</h2>
+<div class="inline-block_test">
+    HTLMもCSSも書いた過去とないが，勉強しながら勉強成果を書いていく
+</div>  
 </body>
 </html>
