--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
 </head>
 
 <body>
-<h2>Azalea Blog</h2>
-<div class="inline-block_test">
-    HTLMもCSSも書いた過去とないが，勉強しながら勉強成果を書いていく
+<div class=".titleBox">
+<h2>研究日誌</h2>
+</div>
+
+<div class=".pastArticleBox">
+    testRight
 </div>  
+
+<div class=".ContentBox">
+    testLeft
+</div>  
+
+
+
 </body>
 </html>
