--- a/index.html
+++ b/index.html
@@ -7,19 +7,16 @@
 </head>
 
 <body>
-<div class=".titleBox">
-<h2>研究日誌</h2>
+<div class="wrapper">
+    <div class="titleBox">
+        <h2>研究日誌</h2>
+    </div>
+    <div class="ContentBox">
+        testRight
+    </div>
+    <div class="pastArticleBox">
+        testRight
+    </div>
 </div>
-
-<div class=".pastArticleBox">
-    testRight
-</div>  
-
-<div class=".ContentBox">
-    testLeft
-</div>  
-
-
-
 </body>
 </html>
