--- a/template.html
+++ b/template.html
@@ -15,7 +15,7 @@
         testLeft
     </div>
     <div class="pastArticleBox">
-        <a href="template.html" target="_blank">20210401</a>
+         <id="example">これは見出しです。
     </div>
 </div>
 </body>
