--- a/Article/20210401.html
+++ b/Article/20210401.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Azalea Blog</title>
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="../main.css">
 </head>
 
 <body>
@@ -11,11 +11,13 @@
     <div class="titleBox">
         <h1>研究日誌</h1>
     </div>
+
+    <div class="subtitleBox">
+        <h2>20210401</h2>
+    </div>
+
     <div class="ContentBox">
         testLeft
-    </div>
-    <div class="pastArticleBox">
-        <a href="template.html" target="_blank">20210401</a>
     </div>
 </div>
 </body>
