--- a/design/HomePageDesign.html
+++ b/design/HomePageDesign.html
@@ -9,13 +9,13 @@
 <body>
 <div class="wrapper">
     <div class="titleBox">
-        <h1>研究日誌</h1>
+        <h2>研究日誌</h2>
     </div>
     <div class="ContentBox">
         testLeft
     </div>
     <div class="pastArticleBox">
-        <a href="template.html" target="_blank">20210401</a>
+         <id="example">これは見出しです。
     </div>
 </div>
 </body>
