--- a/Article/20210401.html
+++ b/Article/20210401.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Azalea Blog</title>
-<link rel="stylesheet" href="../main.css">
+<link rel="stylesheet" href="../design\article_design.css">
 </head>
 
 <body>
@@ -13,11 +13,26 @@
     </div>
 
     <div class="subtitleBox">
-        <h2>20210401</h2>
+        <h2>20210401_本日の進捗報告</h2>
     </div>
 
     <div class="ContentBox">
-        testLeft
+        <p>
+            ・研究系 : 自身の研究進捗は0で，全ゼミや打ち合わせが本日はメイン
+        </p>
+        <p>
+            ・研究室関連 : 新入生課題・新規テーマ打ち合わせ<br>
+                → 新入生課題(Matlab・API) : 基本的に問題なし．APIは後日に内容確認．<br>
+                → 新規テーマ : 新規クラス追加は要検討.教師なし学習の具体案とノンパラの検討
+        </p>
+        <p>
+            ・研究日誌Web : 別フォルダ内のhtmlの読み込みが完了<br>
+                → 日ごとにhtmlを書いて，進捗確認の記事がかけるようになった．<br>
+                → 各記事やHomePageのデザインやテンプレが決まってないので続ける<br>
+                → 予定では最新の5記事を真ん中に読み込ませる．再度は検索フォームやタグ等に用いる．<br>
+                → タイトルが2重に出る.背景は統一化して，コンテンツ部分だけを抽出したい
+        </p>
+        
     </div>
 </div>
 </body>
