--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <h1>研究日誌</h1>
     </div>
     <div class="ContentBox">
-        testLeft
+        <iframe src="Article/20210401.html"></iframe>
     </div>
     <div class="pastArticleBox">
-        <a href="template.html" target="_blank">20210401</a>
+        <a href="Article/20210401.html" target="_blank">20210401</a>
     </div>
 </div>
 </body>
