--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
         <h1>研究日誌</h1>
     </div>
     <div class="ContentBox">
+        <iframe src="Article/20210402.html"></iframe>
         <iframe src="Article/20210401.html"></iframe>
     </div>
     <div class="pastArticleBox">
+        <a href="Article/20210402.html" target="_blank">20210402</a> <br>
         <a href="Article/20210401.html" target="_blank">20210401</a>
     </div>
 </div>
